Ajusta estilo do  section story. Remove configuraçoes de reset. Atualiza imagens

--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-} /* Faz reset dessas proprieadades.*/
-
 body::-webkit-scrollbar{
     width: 3px;
 }
@@ -55,26 +49,20 @@ body::-webkit-scrollbar{
 #image-profile-end {
     border-radius: 50%;
 }
+
 .story {
     display: flex;
     justify-content: space-evenly;
+    margin: 0;
     margin-top: 110px;
     border-bottom:1px solid rgba(0, 0, 0, 0.4);
 }
 
 .story-image {
-  width: 150px;
-  height: auto;
-/*   position: static;
- */  text-align: center;
-  border-radius: 50%;
+   text-align: center;
+   border-radius: 50%;
+   
 }
 
-.story-image::after {
-    content: attr(data-title); /* estilo que coloco a legenda no lugar */
-    position: absolute;
-    width: 100%;
-    bottom: -20px;
-    left: 0;
-  }
+
 
