--- a/style.css
+++ b/style.css
@@ -34,3 +34,44 @@
 #header-profile, .story-image {
     border-radius: 50%;
 }
+
+.story {
+    position: static;
+    display: flex;
+    justify-content: space-evenly;
+    margin: 0;
+    border-bottom:1px solid rgba(0, 0, 0, 0.4);
+    flex: 1;
+    padding: 62px 0 5px;
+
+}
+
+.story figcaption {
+    letter-spacing: .01em;
+    color: #262626;
+    display: block;
+    font-size: 12px;
+    line-height: 14px;
+    text-align: center;
+    overflow: hidden;
+    max-width: 64px;  
+    text-overflow: ellipsis;
+    top: 68px;
+    white-space: nowrap;
+    align-items: stretch;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.story-image {
+    text-align: center;
+    border-radius: 50%;
+    width: 66px;
+    height: auto;  
+
+    
+     
+}
+
+.insta main {
+    f
+}
