--- a/style.css
+++ b/style.css
@@ -15,15 +15,13 @@
     
 }
 
-
-
 .insta header {
     position: fixed;
     top: 0;
     right: 0;
     left: 0;
     padding: 0 20px;
-    border-bottom:1px solid rgba(0, 0, 0, 0.2);
+    border-bottom:1px solid rgba(0, 0, 0, 0.2);   
 }
 
 .insta footer {
@@ -46,15 +44,12 @@
     margin-left: auto;
     margin-right: auto;
     width: 612px;
+    height: 90px;
     padding: 16px 0;
     border: 1px solid rgba(0, 0, 0, 0.2);
     background: #fff;
     align-items: center;
-}
-
-.story section {
-    height: 84px;
-    overflow: auto;
+    overflow: ;    
 }
 
 .story figcaption {
@@ -77,14 +72,15 @@
     text-align: center;
     border-radius: 50%;
     width: 66px;
-    height: auto;  
+/*     height: auto; */
+    padding: 0 4px;  
  
      
 }
-.botao {
-    width: 72;
+/* .botao {
+    width: 72px;
     padding: 0 6px;
-}
+} */
 
 main {
     margin-left: auto;
